# chip8_emulator

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Chip8.hpp  IChip8.hpp
include/display/: Display.hpp  IDisplay.hpp
src/: CMakeLists.txt  Chip8.cpp  main.cpp
src/display/: CMakeLists.txt  Display.cpp
